<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="426dp"
        android:layout_height="254dp"
        android:background="@drawable/m_r1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="97dp"
            android:layout_height="96dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/m_foam"
            android:src="@drawable/umer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/umer_yousaf"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/umeryousaf2020_gmail_com"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="236dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/search_curve"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4"
        app:searchIcon="@drawable/search_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="398dp"
        android:layout_height="152dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <!-- First horizontal LinearLayout with three CardViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#E60D53E3"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:background="@drawable/s_o2"
                    android:padding="15dp"
                    android:src="@drawable/shopping_cart"
                    tools:ignore="ContentDescription" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#E60D53E3"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:background="@drawable/s_o2"
                    android:padding="15dp"
                    android:src="@drawable/placeholder"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#E60D53E3"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:background="@drawable/s_o2"
                    android:padding="15dp"
                    android:src="@drawable/mail_inbox_app"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayouts"
        android:layout_width="406dp"
        android:layout_height="139dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <!-- First horizontal LinearLayout with three CardViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#E60D53E3"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:background="@drawable/s_o2"
                    android:padding="15dp"
                    android:src="@drawable/setting"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#E60D53E3"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:background="@drawable/s_o2"
                    android:padding="15dp"
                    android:src="@drawable/star"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#E60D53E3"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:background="@drawable/s_o2"
                    android:padding="15dp"
                    android:src="@drawable/logout"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="424dp"
        android:layout_height="74dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/rect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@drawable/home"
            android:backgroundTint="@color/white"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@drawable/user"
            android:backgroundTint="@color/white"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/customer_service"
            android:backgroundTint="@color/white"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/settings"
            android:backgroundTint="@color/white"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="92dp"
        android:layout_height="87dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_bal"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayouts" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_gravity="center"
        android:background="@drawable/s_c2"
        android:padding="15dp"
        android:src="@drawable/shopping_cart"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:tint="@color/black"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>